--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,6 @@ pymongo==4.3.3
 scipy==1.10.0
 segmentation_models==1.0.1
 SimpleITK==2.2.1
-# tensorflow==2.11.0
+tensorflow==2.11.0
 tensorflow_gpu==2.10.1
 Werkzeug==2.2.2
